# ws

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
docs/: power.drawio
wasm-client/: Cargo.toml  LICENSE_MIT  README.md
wasm-client/src/: lib.rs  utils.rs
wasm-client/src/models/: course.rs
wasm-client/www/: index.html  index.js  package-lock.json
webapp/: .env.example  Cargo.toml
webapp/src/: errors.rs  handlers.rs  models.rs
webapp/static/: register.html  teachers.html
webservice/: Cargo.toml
webservice/docs/: course.sql  teacher.sql
webservice/src/: errors.rs  routers.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  teacher.rs
webservice/src/models/: course.rs  teacher.rs
