[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
serde = { version = "1.0.132", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.38", features = ["vendored"] }
sqlx = { version = "0.5.11", default_featrues = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

# [[bin]] 表示：可以运行为 cargo run -p webservice --bin service1
#  两个括号代表可以多个区域
# 如：
# [[bin]]
# name = "service1" # src目录下创建 /bin/service1.rs 文件
# [[bin]]
# name = "service2"

[[bin]]
name = "teacher-service"